<resources>
    <string name="app_name">Plan</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Register</string>
	<string name="title_activity_questions_in_deutsch">QuestionsInDeutsch</string>
    <string name="title_activity_picture_word_match">PictureWordMatch</string>
    <string name="title_activity_vocabulary">Vocabulary</string>
    <string name="title_activity_flashcards">Flashcards</string>
    <string name="title_activity_article">Article</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="learningmenu_text">Learning Menu</string>
    <string name="questionsindeutsch">Questions in Deutsch</string>
    <string name="picturewordmatch">Picture-word match</string>
    <string name="article">Article</string>
    <string name="vocabulary">Vocabulary</string>

    <string name="flashcards">Flashcards</string>
    <string name="picturewordlabel">Picture-Word Match</string>
    <string name="nextpicture">Next</string>
    <string name="appleimage">image</string>
    <string name="articlepage">Article</string>
    <string name="flashcardspage">Flashcards</string>
    <string name="flashcardname">Die Eiswurfel</string>
    <string name="nextarticlebutton">next</string>
    <string name="imageName">Der Apfel</string>
	    <string name="title_activity_quiz1">quiz1</string>
    <string name="title_activity_quiz2">quiz2</string>
    <string name="title_activity_quiz">quiz</string>
    <string name="level1_text">Level 1</string>
    <string name="question1_text">Was ist das ?</string>
    <string name="option1_text">Milch</string>
    <string name="option2_text">Bier</string>
    <string name="nav1">Next</string>

    <string name="level2_text">Level 2</string>
    <string name="question2_text">Füllen Sie mit dem passende artikel.</string>
    <string name="computer_text">Computer</string>
    <string name="option21_text">Der</string>
    <string name="option22_text">Die</string>
    <string name="option23_text">Das</string>
    <string name="score1">View Score</string>

    <string name="title_activity_startquiz1">startquiz1</string>
    <string name="start1">QUIZ 1</string>
    <string name="tscore1">Total Score</string>
    <string name="title_activity_pwm12">pwm12</string>
    <string name="pmwq1_text">1. Was ist das?</string>
    <string name="pwmq2_text">2. Was ist das?</string>
    <string name="pwmo22_text">Auto</string>
    <string name="pwmnav2_text">Next</string>
    <string name="title_activity_pwm13">pwm13</string>
    <string name="pwmo21_text">Apfel</string>
    <string name="title_activity_startquiz2">startquiz2</string>
    <string name="title_activity_articlequestion22">articlequestion22</string>
    <string name="aq2_text">2. Füllen Sie mit dem passende akkusative artikel.</string>
    <string name="a2_text">Sie finden ____ Garten schön.</string>
    <string name="ao21_text">Den</string>
    <string name="ao22_text">Die</string>
    <string name="ao23_text">Das</string>
    <string name="anav2_text">Next</string>
    <string name="title_activity_articlequestion23">articlequestion23</string>
    <string name="title_activity_endquiz2">endquiz2</string>
    <string name="end2_text">Total Score</string>
    <string name="aq3_text">3. Füllen Sie mit dem passende dativ artikel.</string>
    <string name="title_activity_startquiz3">startquiz3</string>
    <string name="title_activity_sentencequestion31">sentencequestion31</string>
    <string name="title_activity_sentencequestion32">sentencequestion32</string>
    <string name="title_activity_sentencequestion33">sentencequestion33</string>
    <string name="title_activity_endquiz3">endquiz3</string>
    <string name="title_activity_startquiz4">startquiz4</string>
    <string name="title_activity_readingparagraph4">readingparagraph4</string>
    <string name="title_activity_readingquestion41">readingquestion41</string>
    <string name="title_activity_readingquestion42">readingquestion42</string>
    <string name="title_activity_readingquestion43">readingquestion43</string>
    <string name="title_activity_end4">end4</string>
    <string name="endquiz4_text">total score</string>
    <string name="ok1_text">ok</string>
    <string name="ok2_text">OK</string>
    <string name="ok3_text">ok</string>
    <string name="a3_text">a3_text</string>
    <string name="ao31_text">ao31_text</string>
    <string name="ao33_text">ao33_text</string>
    <string name="score2_text">score2_text</string>
    <string name="ao32_text">ao32_text</string>
    <string name="end3_text">end3_text</string>
    <string name="start3_text">start3_text</string>
    <string name="sq2_text">sq2_text</string>
    <string name="snav2">snav2_text</string>
    <string name="sq3_text">sq3_text</string>
    <string name="score3">score3_text</string>
    <string name="st_text">st_text</string>
    <string name="sq1_text">sq1_text</string>
    <string name="snav1_text">snav1_text</string>
    <string name="start4_text">start4_text</string>
    <string name="pt_text">pt_text</string>
    <string name="para_text">para_text</string>
    <string name="readnav1_text">readnav1_text</string>
    <string name="readq1_text">readq1_text</string>
    <string name="reado11_text">reado11_text</string>
    <string name="reado12_text">reado12_text</string>
    <string name="readnav2_text">readnav2_text</string>
    <string name="readq2_text">readq2_text</string>
    <string name="reado21_text">reado21_text</string>
    <string name="reado22_text">reado22_text</string>
    <string name="readnav3_text">readnav3_text</string>
    <string name="pwmq2">pwmq2_text</string>
    <string name="pwmo22">pwmo22_text</string>
    <string name="pwmq3_text">pwmq3_text</string>
    <string name="pwmo31_text">pwmo31_text</string>
    <string name="pwmo32_text">pwmo32_text</string>
    <string name="score1_text">score1_text</string>
    <string name="aq1_text">aq1_text</string>
    <string name="anav1_text">anav1_text</string>
    <string name="readq3_text">readq3_text</string>
    <string name="reado31_text">reado31_text</string>
    <string name="reado32_text">reado32_text</string>
    <string name="score4_text">score4_text</string>
    <string name="start2_text">start2_text</string>
    <string name="pwmq2n_text">Was ist das?</string>
    <string name="pwmo22n_text">Handy</string>
    <string name="pwmq3n_text">Was ist das?</string>
    <string name="pwmo31n_text">Computer</string>
    <string name="pwmo32n_text">Auto</string>
    <string name="start2n_text">Quiz 2</string>
    <string name="a2n_text">Sie finden _____ Garten schön.</string>
    <string name="a3n_text">Die Bücher stehen in _____ Regal.</string>
    <string name="ao31n_text">Dem</string>
    <string name="ao32n_text">Die</string>
    <string name="ao33n_text">Das</string>
    <string name="score2n_text">View Score</string>
    <string name="start3n_text">Quiz 3</string>
    <string name="stn_text">Ordnen Sie und schreiben Sie Sätze.</string>
    <string name="sq1n_text">Berlin - in - wohnen - Wir</string>
    <string name="snav1n_text">Next</string>
    <string name="sq2n_text">Unser - keinen - Garten - hat - Haus</string>
    <string name="snav2n_text">Next</string>
    <string name="sq2nn_text">2. Unser - keinen - Garten - hat - Haus</string>
    <string name="sq1nn_text">1. Berlin - in -wohnen - Wir</string>
    <string name="sq3nn_text">3. komme - Indien - Ich - aus</string>
    <string name="score3n_text">View Score</string>
    <string name="end3n_text">total score</string>
    <string name="readq3n_text">Wo arbeitet Martina?</string>
    <string name="reado31n_text">IBM</string>
    <string name="reado32n_text">KAKO</string>
    <string name="score4n_text">View Score</string>
    <string name="readq2n_text">Welche Berufsausbildung hat Martina gemacht?</string>
    <string name="reado21n_text">Sekretärin</string>
    <string name="reado22n_text">Chef</string>
    <string name="readnav3n_text">Next</string>
    <string name="readq1n_text">Wo ist Martina zur schule gegangen?</string>
    <string name="reado11n_text">Aachen</string>
    <string name="reado12n_text">Berlin</string>
    <string name="readnav2n_text">Next</string>
    <string name="ptn_text">Lesen Sie und antworten Sie.</string>
    <string name="paran_text">Ich heiße Martina Klein. Ich bin 24 Jahre alt und wohne in Berlin. Ich bin in Berlin geboren und auch hier zur schule gegangen. Nach der schule habe ich eine Ausbildung zur Sekretärin gemacht. Diese Ausbildung habe ich in 2003 abgeschlossen. Seit 2003 arbeite ich als Sekretärin bei KAKO.</string>
    <string name="readnav1n_text">Next</string>
    <string name="start4n_text">Quiz 4</string>
    <string name="score1n_text">View Score</string>
    <string name="aq1n_text">Füllen Sie mit dem passende nominative artikel.</string>
    <string name="anav1n_text">next</string>
    <string name="stnnn_text">Wählen Sie die richtige Reihenfolge.</string>
    <string name="so11n_text">In Berlin wohnen wir.</string>
    <string name="so12n_text">Wir wohnen in berlin.</string>
    <string name="so21n_text">Keinen garten hat unser haus.</string>
    <string name="so22n_text">unser haus hat keinen garten.</string>
    <string name="so31n_text">ich komme aus indien.</string>
    <string name="so32n_text">aus indien komme ich.</string>
</resources>
