<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.maliheh.plan.articlequestion22">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aq2_text"
        android:id="@+id/aq2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:textColor="#ffff6610"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/a2n_text"
        android:id="@+id/a2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff1ac234"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao21_text"
        android:id="@+id/ao21"
        android:layout_below="@+id/a2"
        android:layout_centerHorizontal="true"
        android:textColor="#ff144ed4"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao22_text"
        android:id="@+id/ao22"
        android:layout_below="@+id/ao21"
        android:layout_toLeftOf="@+id/ao21"
        android:layout_toStartOf="@+id/ao21"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textColor="#ff1842db" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao23_text"
        android:id="@+id/ao23"
        android:textColor="#ff0f42d0"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_below="@+id/ao21"
        android:layout_toRightOf="@+id/ao21"
        android:layout_toEndOf="@+id/ao21" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anav2_text"
        android:id="@+id/anav2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
