<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.maliheh.plan.articlequestion23">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aq3_text"
        android:id="@+id/aq3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:textColor="#ffff490e"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/a3n_text"
        android:id="@+id/a2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff14bb41"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao31n_text"
        android:id="@+id/ao31"
        android:layout_below="@+id/a2"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1c45d9"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao32n_text"
        android:id="@+id/ao32"
        android:layout_below="@+id/ao31"
        android:layout_toLeftOf="@+id/ao31"
        android:layout_toStartOf="@+id/ao31"
        android:textColor="#ff0f38db"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao33n_text"
        android:id="@+id/ao33"
        android:layout_below="@+id/ao31"
        android:layout_toRightOf="@+id/ao31"
        android:layout_toEndOf="@+id/ao31"
        android:textColor="#ff113cda"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score2n_text"
        android:id="@+id/score2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
