<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.namitha.way2dsm.MainActivity1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:textSize="15pt"
        android:textStyle="bold"
        android:text="@string/learningmenu_text"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/questionsindeutsch"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90sp"
        android:layout_marginLeft="55sp"
        android:clickable="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/picturewordmatch"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="155sp"
        android:layout_marginLeft="55sp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/article"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="220sp"
        android:layout_marginLeft="55sp"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/vocabulary"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="285sp"
        android:layout_marginLeft="55sp"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/flashcards"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350sp"
        android:layout_marginLeft="55sp"/>

</RelativeLayout>
