<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.delin.way2dsm2.quiz1"
    android:id="@+id/id2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/aq1"
        android:layout_marginTop="54dp"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textColor="#ffea7737"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/aq1n_text"
        android:longClickable="false" />

    <EditText
        android:layout_width="@dimen/abc_action_bar_stacked_tab_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/blankspace"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/computer_text"
        android:id="@+id/a1"
        android:layout_alignBottom="@+id/blankspace"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ff159e33"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option21_text"
        android:id="@+id/ao11"
        android:textColor="#ff1f36d3"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_below="@+id/blankspace"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option22_text"
        android:id="@+id/ao12"
        android:layout_below="@+id/ao11"
        android:layout_toLeftOf="@+id/ao11"
        android:layout_toStartOf="@+id/ao11"
        android:textColor="#ff1d36c1"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option23_text"
        android:id="@+id/ao13"
        android:layout_alignBottom="@+id/ao12"
        android:layout_alignLeft="@+id/a1"
        android:layout_alignStart="@+id/a1"
        android:textColor="#ff1b33c7"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anav1n_text"
        android:id="@+id/anav1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
